--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <div class="logo-container">
-    <img src="logo.png" alt="Logo">
+    <img src="images/logo.png" alt="Logo">
   </div>
    <div class="title-container">
     <h1>CHÂU TẤN PHONG</h1>
@@ -23,7 +23,7 @@
 <br>
 <main>
 	<div class="image-container">
-	<img src="PhongChau.png" alt="Image A">
+	<img src="images/PhongChau.png" alt="Image A">
   </div>
 		<div class="content-container">
 	<h2>Giới thiệu</h2>
