--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CHAU TAN PHONG</title>
+<link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
+<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 </style>
 </head>
@@ -19,24 +21,103 @@
       <li><a href="#">Liên hệ</a></li>
     </ul>
   </nav>
-</header>
-<br>
-<main>
-	<div class="image-container">
-	<img src="images/PhongChau.png" alt="Image A">
+</head>
+
+<body>
+  <header>
+    
+  </header>
+
+  <div class="container">
+    <!-- partial:index.partial.html -->
+    <div class="app">
+
+      <div class="cardList">
+        <button class="cardList__btn btn btn--left">
+          <div class="icon">
+            <svg>
+              <use xlink:href="#arrow-left"></use>
+            </svg>
+          </div>
+        </button>
+
+        <div class="cards__wrapper">
+          <div class="card current--card">
+            <div class="card__image">
+              <img src="https://media-private.canva.com/ReUfg/MAFb8rReUfg/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T095604Z&X-Amz-Expires=18108&X-Amz-Signature=86c13ff82856feff304bc3a9e25283528ef7f8ea4e2991de90de09a72c368d52&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2014%3A57%3A52%20GMT" alt="CHAU TAN PHONG" />
+            </div>
+          </div>
+          <div class="card next--card">
+            <div class="card__image">
+              <img src="https://media-private.canva.com/fKL8U/MAFb77fKL8U/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230228%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230228T125422Z&X-Amz-Expires=88986&X-Amz-Signature=ce125e4ce6a96ced2fdf2778f1572a09250497dabfcdaffe5571529117c83c95&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A37%3A28%20GMT" alt="CHAU VO VUONG" />
+            </div>
+          </div>
+
+          <div class="card previous--card">
+            <div class="card__image">
+              <img src="https://media-private.canva.com/qtR18/MAFb70qtR18/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T035542Z&X-Amz-Expires=33185&X-Amz-Signature=4b87ba9c0186e2d7cb21fea41f37f6bf6df261a5ed0f7b2effcfe26aabbd0579&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A08%3A47%20GMT" alt="CHAU TIEN PHAT" />
+            </div>
+          </div>
+        </div>
+
+        <button class="cardList__btn btn btn--right">
+          <div class="icon">
+            <svg>
+              <use xlink:href="#arrow-right"></use>
+            </svg>
+          </div>
+        </button>
+      </div>
+
+      <div class="infoList">
+        <div class="info__wrapper">
+          <div class="info current--info">
+            <h1 class="text name">Châu Tấn Phong</h1>
+          </div>
+
+          <div class="info next--info">
+            <h1 class="text name">Châu Võ Vương</h1>
+          </div>
+
+          <div class="info previous--info">
+            <h1 class="text name">Châu Tiến Phát</h1>
+          </div>
+        </div>
+      </div>
+
+      <div class="app__bg">
+        <div class="app__bg__image current--image">
+          <img src="https://media-private.canva.com/Ua0Vg/MAFb71Ua0Vg/1/tl.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230228%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230228T092723Z&X-Amz-Expires=101502&X-Amz-Signature=35179c578451ba5e3ce0a0f94d6d19e276a0ed12ba83f47f5feb3c29fb9ab706&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A39%3A05%20GMT" alt="" />
+        </div>
+        <div class="app__bg__image next--image">
+          <img src="https://media-private.canva.com/fKL8U/MAFb77fKL8U/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230228%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230228T125422Z&X-Amz-Expires=88986&X-Amz-Signature=ce125e4ce6a96ced2fdf2778f1572a09250497dabfcdaffe5571529117c83c95&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A37%3A28%20GMT" alt="" />
+        </div>
+        <div class="app__bg__image previous--image">
+          <img src="https://media-private.canva.com/qtR18/MAFb70qtR18/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T035542Z&X-Amz-Expires=33185&X-Amz-Signature=4b87ba9c0186e2d7cb21fea41f37f6bf6df261a5ed0f7b2effcfe26aabbd0579&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A08%3A47%20GMT" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <div class="loading__wrapper">
+      <div class="loader--text">Loading...</div>
+      <div class="loader">
+        <span></span>
+      </div>
+    </div>
+
+    <svg class="icons" style="display: none;">
+      <symbol id="arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <polyline points="328 112 184 256 328 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
+      </symbol>
+      <symbol id="arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <polyline points="184 112 328 256 184 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
+      </symbol>
+    </svg>
+
+    <!-- partial -->
   </div>
-		<div class="content-container">
-	<h2>Giới thiệu</h2>
-    <p>Mẫu người năng động và hoạt bát, thích trải nghiệm và đối mặt với những thử thách mới. Tôi luôn đặt mục tiêu cao và làm việc hết mình để đạt được kết quả tốt nhất.</p>
-    <br>
-    <p>Với kinh nghiệm trên 5 năm trong lĩnh vực kiểm soát và đảm bảo chất lượng sản phẩm (mỹ phẩm, hóa chất và xăng dầu,….) tôi hiểu rằng chất lượng là yếu tố quan trọng nhất trong bất kỳ doanh nghiệp nào. Tôi tự tin có thể cùng doanh nghiệp đưa ra những giải pháp chất lượng tốt nhất để sản phẩm đạt được sự tin tưởng và ủng hộ của khách hàng.</p>
-	</div>
-</main>
-
-<footer>
-<p>Đây là footer của trang web</p>
-</footer>
-
-
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
