--- a/index.html
+++ b/index.html
@@ -3,24 +3,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>CHAU TAN PHONG</title>
+<style>
 <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
 <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 </style>
-</head>
-<body>
-<header>
-<div class="logo-container">
-    <img src="images/logo.png" alt="Logo">
-  </div>
-   <div class="title-container">
-    <h1>CHÂU TẤN PHONG</h1>
-  <nav>
-    <ul>
-      <li><a href="#">Giới thiệu</a></li>
-      <li><a href="#">Liên hệ</a></li>
-    </ul>
-  </nav>
 </head>
 
 <body>
