--- a/index.html
+++ b/index.html
@@ -1,109 +1,120 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>CHAU TAN PHONG</title>
-      <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
-      <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-      <link rel="stylesheet" type="text/css" href="css/style.css" />
-  </head>
-  
-  <body>
-    <header>
-     
-    </header>
-  
-    <div class="container">
-      <!-- partial:index.partial.html -->
-      <div class="app">
-  
-        <div class="cardList">
-          <button class="cardList__btn btn btn--left">
-            <div class="icon">
-              <svg>
-                <use xlink:href="#arrow-left"></use>
-              </svg>
-            </div>
-          </button>
-  
-          <div class="cards__wrapper">
-            <div class="card current--card">
-              <div class="card__image">
-                <img src="https://media-private.canva.com/ReUfg/MAFb8rReUfg/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T095604Z&X-Amz-Expires=18108&X-Amz-Signature=86c13ff82856feff304bc3a9e25283528ef7f8ea4e2991de90de09a72c368d52&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2014%3A57%3A52%20GMT" alt="CHAU TAN PHONG" />
-              </div>
-            </div>
-            <div class="card next--card">
-              <div class="card__image">
-                <img src="https://media-private.canva.com/fKL8U/MAFb77fKL8U/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230228%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230228T125422Z&X-Amz-Expires=88986&X-Amz-Signature=ce125e4ce6a96ced2fdf2778f1572a09250497dabfcdaffe5571529117c83c95&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A37%3A28%20GMT" alt="CHAU VO VUONG" />
-              </div>
-            </div>
-  
-            <div class="card previous--card">
-              <div class="card__image">
-                <img src="https://media-private.canva.com/qtR18/MAFb70qtR18/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T035542Z&X-Amz-Expires=33185&X-Amz-Signature=4b87ba9c0186e2d7cb21fea41f37f6bf6df261a5ed0f7b2effcfe26aabbd0579&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A08%3A47%20GMT" alt="CHAU TIEN PHAT" />
-              </div>
-            </div>
-          </div>
-  
-          <button class="cardList__btn btn btn--right">
-            <div class="icon">
-              <svg>
-                <use xlink:href="#arrow-right"></use>
-              </svg>
-            </div>
-          </button>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <!--[if IE]>
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <![endif]-->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CHAU TAN PHONG</title>
+  <link rel="stylesheet" href="https://kit.fontawesome.com/f7080f8175.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+
+<body>
+  <!-- partial:index.partial.html -->
+  <div class="app">
+
+    <div class="cardList">
+      <button class="cardList__btn btn btn--left">
+        <div class="icon">
+          <svg>
+            <use xlink:href="#arrow-left"></use>
+          </svg>
         </div>
-  
-        <div class="infoList">
-          <div class="info__wrapper">
-            <div class="info current--info">
-              <h1 class="text name">Châu Tấn Phong</h1>
-            </div>
-  
-            <div class="info next--info">
-              <h1 class="text name">Châu Võ Vương</h1>
-            </div>
-  
-            <div class="info previous--info">
-              <h1 class="text name">Châu Tiến Phát</h1>
-            </div>
+      </button>
+
+      <div class="cards__wrapper">
+        <div class="card current--card">
+          <div class="card__image">
+            <img src="https://media-private.canva.com/ReUfg/MAFb8rReUfg/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T095604Z&X-Amz-Expires=39708&X-Amz-Signature=c918ea95744ba26c54154a35b557f57a260671ad8e935efdac624457a586a621&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A57%3A52%20GMT" alt="" />
           </div>
         </div>
-  
-        <div class="app__bg">
-          <div class="app__bg__image current--image">
-            <img src="https://media-private.canva.com/Ua0Vg/MAFb71Ua0Vg/1/tl.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230228%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230228T092723Z&X-Amz-Expires=101502&X-Amz-Signature=35179c578451ba5e3ce0a0f94d6d19e276a0ed12ba83f47f5feb3c29fb9ab706&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A39%3A05%20GMT" alt="" />
+
+        <div class="card next--card">
+          <div class="card__image">
+            <img src="https://media-private.canva.com/fKL8U/MAFb77fKL8U/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T125422Z&X-Amz-Expires=27786&X-Amz-Signature=7da15aed4a4b3805646dba0a42baa23bc62a3406d06506e31759403454f63b51&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A37%3A28%20GMT" alt="" />
           </div>
-          <div class="app__bg__image next--image">
-            <img src="https://media-private.canva.com/fKL8U/MAFb77fKL8U/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230228%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230228T125422Z&X-Amz-Expires=88986&X-Amz-Signature=ce125e4ce6a96ced2fdf2778f1572a09250497dabfcdaffe5571529117c83c95&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A37%3A28%20GMT" alt="" />
-          </div>
-          <div class="app__bg__image previous--image">
-            <img src="https://media-private.canva.com/qtR18/MAFb70qtR18/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T035542Z&X-Amz-Expires=33185&X-Amz-Signature=4b87ba9c0186e2d7cb21fea41f37f6bf6df261a5ed0f7b2effcfe26aabbd0579&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2013%3A08%3A47%20GMT" alt="" />
+        </div>
+
+        <div class="card previous--card">
+          <div class="card__image">
+            <img src="https://media-private.canva.com/qtR18/MAFb70qtR18/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T035542Z&X-Amz-Expires=58385&X-Amz-Signature=dd65afdd37460082c3f3d71f53ddf2df24a2b3c21cad6be9a47a17099f183c72&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A08%3A47%20GMT" alt="" />
           </div>
         </div>
       </div>
-  
-      <div class="loading__wrapper">
-        <div class="loader--text">Loading...</div>
-        <div class="loader">
-          <span></span>
+
+      <button class="cardList__btn btn btn--right">
+        <div class="icon">
+          <svg>
+            <use xlink:href="#arrow-right"></use>
+          </svg>
         </div>
-      </div>
-  
-      <svg class="icons" style="display: none;">
-        <symbol id="arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-          <polyline points="328 112 184 256 328 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
-        </symbol>
-        <symbol id="arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-          <polyline points="184 112 328 256 184 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
-        </symbol>
-      </svg>
-  
-      <!-- partial -->
+      </button>
     </div>
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
-  
-  </html>
+
+    <div class="infoList">
+      <div class="info__wrapper">
+        <div class="info current--info">
+          <h1 class="text name">CHÂU TẤN PHONG</h1>
+          <h4 class="text location">Scotland</h4>
+          <p class="text description">The mountains are calling</p>
+        </div>
+
+        <div class="info next--info">
+          <h1 class="text name">Machu Pichu</h1>
+          <h4 class="text location">Peru</h4>
+          <p class="text description">Adventure is never far away</p>
+        </div>
+
+        <div class="info previous--info">
+          <h1 class="text name">Chamonix</h1>
+          <h4 class="text location">France</h4>
+          <p class="text description">Let your dreams come true</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="app__bg">
+      <div class="app__bg__image current--image">
+        <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+      </div>
+      <div class="app__bg__image next--image">
+        <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+      </div>
+      <div class="app__bg__image previous--image">
+        <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+      </div>
+    </div>
+  </div>
+
+  <div class="loading__wrapper">
+    <div class="loader--text">Loading...</div>
+    <div class="loader">
+      <span></span>
+    </div>
+  </div>
+
+  <svg class="icons" style="display: none;">
+    <symbol id="arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <polyline points="328 112 184 256 328 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
+    </symbol>
+    <symbol id="arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <polyline points="184 112 328 256 184 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
+    </symbol>
+  </svg>
+
+  <div class="support">
+    <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
+    <a href="https://dribbble.com/devloop01" target="_blank"><i class="fab fa-dribbble"></i></a>
+  </div>
+  <!-- partial -->
+  <script src="https://kit.fontawesome.com/f7080f8175.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+  <script src="js/script.js"></script>
+
+</body>
+
+</html>
