--- a/index.html
+++ b/index.html
@@ -58,33 +58,27 @@
       <div class="info__wrapper">
         <div class="info current--info">
           <h1 class="text name">CHÂU TẤN PHONG</h1>
-          <h4 class="text location">Scotland</h4>
-          <p class="text description">The mountains are calling</p>
         </div>
 
         <div class="info next--info">
-          <h1 class="text name">Machu Pichu</h1>
-          <h4 class="text location">Peru</h4>
-          <p class="text description">Adventure is never far away</p>
+          <h1 class="text name">CHÂU VÕ VƯƠNG</h1>
         </div>
 
         <div class="info previous--info">
-          <h1 class="text name">Chamonix</h1>
-          <h4 class="text location">France</h4>
-          <p class="text description">Let your dreams come true</p>
+          <h1 class="text name">CHÂU TẤN PHONG</h1>
         </div>
       </div>
     </div>
 
     <div class="app__bg">
       <div class="app__bg__image current--image">
-        <img src="https://source.unsplash.com/Z8dtTatMVMw" alt="" />
+        <img src="https://media-private.canva.com/5ZDdE/MAFb7h5ZDdE/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T145040Z&X-Amz-Expires=20170&X-Amz-Signature=b6c3625d84ece9a28cda59d6b4ade8ed3c43a3341c3a719e3fb5fead015ca86a&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A26%3A50%20GMT" alt="" />
       </div>
       <div class="app__bg__image next--image">
-        <img src="https://source.unsplash.com/9dmycbFE7mQ" alt="" />
+        <img src="https://media-private.canva.com/Ua0Vg/MAFb71Ua0Vg/1/tl.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T092723Z&X-Amz-Expires=40302&X-Amz-Signature=38858a7674a54160dccdcc4677e0d60dfd876950d779ee2bd65c0fbc447d7776&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A39%3A05%20GMT" alt="" />
       </div>
       <div class="app__bg__image previous--image">
-        <img src="https://source.unsplash.com/m7K4KzL5aQ8" alt="" />
+        <img src="https://media-private.canva.com/5ZDdE/MAFb7h5ZDdE/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T145040Z&X-Amz-Expires=20170&X-Amz-Signature=b6c3625d84ece9a28cda59d6b4ade8ed3c43a3341c3a719e3fb5fead015ca86a&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A26%3A50%20GMT" alt="" />
       </div>
     </div>
   </div>
