--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CHAU TAN PHONG</title>
   <link rel="stylesheet" href="https://kit.fontawesome.com/f7080f8175.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-  <!-- partial:index.partial.html -->
   <div class="app">
-
     <div class="cardList">
       <button class="cardList__btn btn btn--left">
         <div class="icon">
@@ -81,8 +80,7 @@
         <img src="https://media-private.canva.com/5ZDdE/MAFb7h5ZDdE/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T145040Z&X-Amz-Expires=20170&X-Amz-Signature=b6c3625d84ece9a28cda59d6b4ade8ed3c43a3341c3a719e3fb5fead015ca86a&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2001%20Mar%202023%2020%3A26%3A50%20GMT" alt="" />
       </div>
     </div>
-  </div>
-
+  
   <div class="loading__wrapper">
     <div class="loader--text">Loading...</div>
     <div class="loader">
@@ -103,6 +101,7 @@
     <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
     <a href="https://dribbble.com/devloop01" target="_blank"><i class="fab fa-dribbble"></i></a>
   </div>
+</div>
   <!-- partial -->
   <script src="https://kit.fontawesome.com/f7080f8175.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
