--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CHAU TAN PHONG</title>
-  <link rel="stylesheet" href="https://kit.fontawesome.com/f7080f8175.css" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/all.min.css" />
+    <link rel="stylesheet" htype="text/css" href="css/style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
 </head>
 
 <body>
@@ -103,9 +102,8 @@
   </div>
 </div>
   <!-- partial -->
-  <script src="https://kit.fontawesome.com/f7080f8175.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/gsap.min.js"></script>
+  <script src="js/imagesloaded.pkgd.min.js"></script>
+  <script src="js/gsap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 
