link font awesome free

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CHAU TAN PHONG</title>
-  <link rel="stylesheet" type="text/css" href="css/all.min.css" />
-    <link rel="stylesheet" htype="text/css" href="css/style.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
+  <link rel="stylesheet" href="https://kit.fontawesome.com/f7080f8175.css" crossorigin="anonymous">
+  <link rel="stylesheet" htype="text/css" href="css/style.css"/>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat&amp;display=swap">
 </head>
 
 <body>
