--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
   </div>
 </div>
   <!-- partial -->
+  <script src="https://kit.fontawesome.com/f7080f8175.js" crossorigin="anonymous"></script>
   <script src="js/imagesloaded.pkgd.min.js"></script>
   <script src="js/gsap.min.js"></script>
   <script src="js/script.js"></script>
