--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
   </svg>
 
   <div class="support">
-    <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
-    <a href="https://dribbble.com/devloop01" target="_blank"><i class="fab fa-dribbble"></i></a>
+    <a href="https://www.facebook.com/PhongChau.213"><i class="fa-brands fa-facebook"></i></a>
+    <a href="https://github.com/CTPhong213"><i class="fa-brands fa-github"></i></a>
   </div>
 </div>
   <!-- partial -->
