--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				</div>
 
 				<div class="info previous--info">
-					<h1 class="text name">CHÂU TẤN PHONG</h1>
+					<h1 class="text name">CHÂU TIẾN PHÁT</h1>
 				</div>
 			</div>
 		</div>
