--- a/index.html
+++ b/index.html
@@ -14,6 +14,34 @@
 </head>
 
 <body>
+	<header>
+		<style>
+		.header {
+			position: relative;
+  			height: 50px;
+  			height: 50px;
+		}
+
+		.logo-container {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 50px;
+			height: 100%;
+			overflow: hidden;
+			border-radius: 10px;
+		}
+
+		.logo-container img {
+			max-width: 100%; /* chiều rộng tối đa là 100% */
+			max-height: 100%; /* chiều cao tối đa là 100% */
+			object-fit: contain; /* giữ tỷ lệ khung hình */
+		}
+		</style>
+		<div class="logo-container">
+			<img src="images/logo.png" alt="Logo">
+		</div>
+	</header>
 	<div class="app">
 		<div class="cardList">
 			<button class="cardList__btn btn btn--left">
