--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 		}
 		</style>
 		<div class="logo-container">
-			<img src="images/logo.png" alt="Logo">
+			<img src="https://media-private.canva.com/sCpRw/MAFbi9sCpRw/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T165546Z&X-Amz-Expires=75574&X-Amz-Signature=75f9fecfe5add204865b5664728cf41c9f7d146af7156a48f59f27b1d7f63b30&X-Amz-SignedHeaders=host&response-expires=Thu%2C%2002%20Mar%202023%2013%3A55%3A20%20GMT" alt="Logo">
 		</div>
 	</header>
+	
 	<div class="app">
 		<div class="cardList">
 			<button class="cardList__btn btn btn--left">
