--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 			width: 50px;
 			height: 100%;
 			overflow: hidden;
-			border-radius: 10px;
 		}
 
 		.logo-container img {
@@ -42,8 +41,282 @@
 			<img src="https://media-private.canva.com/sCpRw/MAFbi9sCpRw/1/tl.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20230301%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230301T165546Z&X-Amz-Expires=75574&X-Amz-Signature=75f9fecfe5add204865b5664728cf41c9f7d146af7156a48f59f27b1d7f63b30&X-Amz-SignedHeaders=host&response-expires=Thu%2C%2002%20Mar%202023%2013%3A55%3A20%20GMT" alt="Logo">
 		</div>
 	</header>
-	
+
 	<div class="app">
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap");
+			:root {
+  			--card-width: 200px;
+  			--card-height: 300px;
+  			--card-transition-duration: 800ms;
+  			--card-transition-easing: ease;
+			}
+			* {
+				box-sizing: border-box;
+				margin: 0;
+				padding: 0;
+			}
+			.button {
+				border: none;
+				background: none;
+				cursor: pointer;
+			}
+			.button:focus {
+				outline: none;
+				border: none;
+			}
+
+			.app {
+				position: relative;
+				width: 100%;
+				height: 500px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+			.app__bg {
+				position: absolute;
+				width: 100%;
+				height: 500px;
+				z-index: -5;
+				filter: blur(8px);
+				pointer-events: none;
+				user-select: none;
+				overflow: hidden;
+			}
+			.app__bg::before {
+				content: "";
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 500px;
+				background: #000;
+				z-index: 1;
+				opacity: 0.8;
+			}
+			.app__bg__image {
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%) translateX(var(--image-translate-offset, 0));
+				width: 100%;
+				height: 500px;
+				transition: transform 1000ms ease, opacity 1000ms ease;
+				overflow: hidden;
+			}
+			.app__bg__image img {
+				width: 100%;
+				height: 500px;
+				object-fit: cover;
+			}
+			.app__bg__image.current--image {
+				opacity: 1;
+				--image-translate-offset: 0;
+			}
+			.app__bg__image.previous--image,
+			.app__bg__image.next--image {
+				opacity: 0;
+			}
+			.app__bg__image.previous--image {
+				--image-translate-offset: -25%;
+			}
+			.app__bg__image.next--image {
+				--image-translate-offset: 25%;
+			}
+
+			.cardList {
+				position: absolute;
+				width: calc(3 * var(--card-width));
+				height: auto;
+				}
+			.cardList__btn {
+				--btn-size: 35px;
+				width: var(--btn-size);
+				height: var(--btn-size);
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				z-index: 100;
+			}
+			.cardList__btn.btn--left {
+				left: -5%;
+			}
+			.cardList__btn.btn--right {
+				right: -5%;
+			}
+			.cardList__btn .icon {
+				width: 100%;
+				height: 100%;
+			}
+			.cardList__btn .icon svg {
+				width: 100%;
+				height: 100%;
+			}
+			.cardList .cards__wrapper {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				perspective: 1000px;
+			}
+
+			.card {
+				--card-translateY-offset: 100vh;
+				position: absolute;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%) translateX(var(--card-translateX-offset))
+					translateY(var(--card-translateY-offset))
+					rotateY(var(--card-rotation-offset)) scale(var(--card-scale-offset));
+				display: inline-block;
+				width: var(--card-width);
+				height: var(--card-height);
+				transition: transform var(--card-transition-duration)
+					var(--card-transition-easing);
+				user-select: none;
+			}
+			.card::before {
+				content: "";
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				background: #000;
+				z-index: 1;
+				transition: opacity var(--card-transition-duration)
+					var(--card-transition-easing);
+				opacity: calc(1 - var(--opacity));
+			}
+			.card__image {
+				position: relative;
+				width: 100%;
+				height: 100%;
+			}
+			.card__image img {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+			.card.current--card {
+				--current-card-rotation-offset: 0;
+				--card-translateX-offset: 0;
+				--card-rotation-offset: var(--current-card-rotation-offset);
+				--card-scale-offset: 1.2;
+				--opacity: 0.8;
+			}
+				.card.previous--card {
+				--card-translateX-offset: calc(-1 * var(--card-width) * 1.1);
+				--card-rotation-offset: 25deg;
+			}
+				.card.next--card {
+				--card-translateX-offset: calc(var(--card-width) * 1.1);
+				--card-rotation-offset: -25deg;
+			}
+				.card.previous--card,
+				.card.next--card {
+				--card-scale-offset: 0.9;
+				--opacity: 0.4;
+			}
+
+			.infoList {
+				position: absolute;
+				width: calc(3 * var(--card-width));
+				height: var(--card-height);
+				pointer-events: none;
+			}
+			.infoList .info__wrapper {
+				position: relative;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: flex-start;
+				align-items: flex-end;
+				perspective: 1000px;
+				transform-style: preserve-3d;
+			}
+
+			.info {
+				margin-top: calc(var(--card-height) / 1);
+				margin-left: calc(var(--card-width) / 1.5);
+				transform: translateZ(2rem);
+				transition: transform var(--card-transition-duration)
+					var(--card-transition-easing);
+			}
+			.info .text {
+				position: relative;
+				font-family: "Montserrat";
+				font-size: calc(var(--card-width) * var(--text-size-offset, 0.1));
+				white-space: nowrap;
+				color: white;
+				width: fit-content;
+			}
+			.info .name,
+			.info .location {
+				text-transform: uppercase;
+			}
+			.info.current--info {
+				opacity: 1;
+				display: block;
+			}
+			.info.previous--info,
+			.info.next--info {
+				opacity: 0;
+				display: none;
+			}
+
+			.loading__wrapper {
+				position: fixed;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				background: #000;
+				z-index: 200;
+			}
+			.loading__wrapper .loader--text {
+				color: #fff;
+				font-family: "Montserrat";
+				font-weight: 500;
+				margin-bottom: 1.4rem;
+			}
+			.loading__wrapper .loader {
+				position: relative;
+				width: 200px;
+				height: 2px;
+				background: rgba(255, 255, 255, 0.25);
+			}
+			.loading__wrapper .loader span {
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				background: red;
+				transform: scaleX(0);
+				transform-origin: left;
+			}
+
+			@media only screen and (min-width: 800px) {
+				:root {
+					--card-width: 250px;
+					--card-height: 400px;
+				}
+			}
+
+			@media screen and (max-width: 1024px) {
+				#wrapper {
+					width: 100%;
+				}
+			}
+		</style>
 		<div class="cardList">
 			<button class="cardList__btn btn btn--left">
 				<div class="icon">
@@ -119,10 +392,10 @@
 
 		<svg class="icons" style="display: none;">
 			<symbol id="arrow-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-				<polyline points="328 112 184 256 328 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
+				<polyline points="328 112 184 256 328 400" style="fill:none;stroke:rgb(20, 20, 20);stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
 			</symbol>
 			<symbol id="arrow-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-				<polyline points="184 112 328 256 184 400" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
+				<polyline points="184 112 328 256 184 400" style="fill:none;stroke:rgb(20, 20, 20);stroke-linecap:round;stroke-linejoin:round;stroke-width:48px" />
 			</symbol>
 		</svg>
 
